Atualizei a tela cadastro e fiz a tela de login

--- a/processoSeletivo/cadastro.html
+++ b/processoSeletivo/cadastro.html
@@ -7,6 +7,9 @@
   <link rel="stylesheet" href="cadastro.css">
 </head>
 <body>
+
+
+
   <div class="form-container">
     <h2>CADASTRO</h2>
     <form>
@@ -31,14 +34,15 @@
 
       <label>Gênero:</label>
       <div class="gender-options">
-        <label><input type="radio" name="genero" value="F"> F</label>
-        <label><input type="radio" name="genero" value="M"> M</label>
+        <label><input type="radio" name="genero" value="F"> Femenino</label>
+        <label><input type="radio" name="genero" value="M"> Masculino</label>
         <label><input type="radio" name="genero" value="Outro"> Outro</label>
       </div>
 
       <button type="submit">CADASTRA-SE</button>
     </form>
   </div>
+
 
   <script>
     
@@ -69,5 +73,7 @@
       selectAno.appendChild(option);
     }
   </script>
+
+
 </body>
 </html>
