--- a/processoSeletivo/cadastro.html
+++ b/processoSeletivo/cadastro.html
@@ -8,9 +8,12 @@
 </head>
 <body>
 
+  <header>
+    <img src="logo.jpg" alt="Tech Talents Logo" class="logo"/>
+  </header>
 
-
-  <div class="form-container">
+  <main>
+    <div class="form-container">
     <h2>CADASTRO</h2>
     <form>
       <input type="text" placeholder="Nome completo" required>
@@ -42,7 +45,24 @@
       <button type="submit">CADASTRA-SE</button>
     </form>
   </div>
-
+  </main>
+  
+  <footer>
+    <div class="footer-links">
+      <div>
+        <strong>Perfil</strong><br />
+        Minhas Candidaturas<br />
+        Currículo
+      </div>
+      <div>
+        <strong>Recursos</strong><br />
+        Vagas<br />
+        Testes
+      </div>
+    </div>
+    <img src="logo.jpg" alt="Tech Talents Logo" class="footer-logo"/>
+    <p>&copy; 2025 Tech Talents. Todos os direitos reservados. | <a href="#">Política de Privacidade</a> | <a href="#">Termos de Serviço</a></p>
+  </footer>
 
   <script>
     
