Atualização de todas as páginas

--- a/processoSeletivo/cadastro.html
+++ b/processoSeletivo/cadastro.html
@@ -17,10 +17,10 @@
                         <a href="#perfil" class="nav-link" data-section="perfil">Perfil</a>
                     </li>
                     <li class="nav-item">
-                        <a href="#vagas" class="nav-link" data-section="vagas">Vagas</a>
+                        <a href="vagas.html" class="nav-link" data-section="vagas">Vagas</a>
                     </li>
                     <li class="nav-item">
-                        <a href="#testes" class="nav-link" data-section="testes">Testes</a>
+                        <a href="pgteste.html" class="nav-link" data-section="testes">Testes</a>
                     </li>
                 </ul>
                 <button class="mobile-menu-btn" id="mobileMenuBtn">
@@ -37,8 +37,8 @@
 
           
             <div class="auth-buttons">
-                <button class="btn btn-login" onclick="handleLogin()">Log in</button>
-                <button class="btn btn-register" onclick="handleRegister()">Register</button>
+              <a href="login.html"> <button class="btn btn-login" onclick="handleLogin()">Login</button></a>
+               <a href="cadastro.html"> <button class="btn btn-register" onclick="handleRegister()">Cadastre-se</button></a>
             </div>
         </div>
     </header>
@@ -84,15 +84,15 @@
                 <div class="footer-column">
                     <h4>Sou</h4>
                     <ul>
-                        <li><a href="#">Minhas Candidaturas</a></li>
-                        <li><a href="#">Currículo</a></li>
+                        <li><a href="vagas.html">Minhas Candidaturas</a></li>
+                        <li><a href="curriculo.html">Currículo</a></li>
                     </ul>
                 </div>
                 <div class="footer-column">
                     <h4>Empresa</h4>
                     <ul>
-                        <li><a href="#">Vagas</a></li>
-                        <li><a href="#">Testes</a></li>
+                        <li><a href="vagas.html">Vagas</a></li>
+                        <li><a href="pgteste.html">Testes</a></li>
                     </ul>
                 </div>
             </div>
